# soulForge

./: .env.example  .gitignore  Makefile  README.md  SoulForge_Engineering_Plan.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
.github/workflows/: ci.yml  release.yml
apps/admin-web/: package.json
believability/: gym_env.py  metrics.py  policy.py  scenario_generator.py  train.py
checkpoints/: simple_policy.npy
configs/: default_behaviors.yaml  default_believability.yaml  default_safety.yaml
configs/persona_presets/: calm_rabbit.yaml  cheerful_bear.yaml  energetic_puppy.yaml  happy_mouse_xiaozhi.txt
demo/: comparison_demo.py  pipeline_demo.py
deploy/: .env.template  deploy.sh
docker/: Dockerfile.admin-web  Dockerfile.ai-core  Dockerfile.gateway  docker-compose.prod.yml  nginx.conf
docs/: architecture.md  hardware_integration_guide.md  protocol_spec.md  rl_training_guide.md
engine/: ambient_behaviors.py  behavior_engine.py  blender.py  reactive_layer.py  triggered_behaviors.py
motion/: impact_analyzer.py  profile_generator.py  smoother.py
protocol/: hardware_manifest.schema.json  mapping_engine.py  primitives.proto  primitives_pb2.py
safety/: cbf_constraint.py  safety_manager.py  thermal_model.py
scripts/: dev.sh  mobile.sh  run_rl_tasks.py  verify_security.py
simulator/: battery_model.py  servo_model.py  toy_simulator.py
tests/: test_behavior_engine.py  test_believability_metrics.py  test_blender.py  test_gym_env.py  test_primitives.py  test_safety.py  test_smoother.py
(+54 files in other folders)
